Fixed bug with overflowing card data

--- a/Code/website/public/styles/style.css
+++ b/Code/website/public/styles/style.css
@@ -347,7 +347,7 @@ tr:nth-child(odd) {
 	background-color: rgba(255, 255, 255, 0.9);
 	text-align: left;
 	width: 280px;
-	height: 200px;
+	height: 230px;
 	vertical-align: top;
 }
 
